@@ -1,3 +1,14 @@
+2009-01-17  James Liggett  <jrliggett@cox.net>
+
+	* plugins/subversion/subversion-log-dialog.c (subversion_show_log),
+	(on_log_view_button_clicked), (subversion_log_window_create),
+	(on_fm_subversion_log):
+	Make the View Log command in the Subversion plugin act immediately when 
+	activated from the file manager context menu.
+	
+	Fixes Bug 565353 – View Log and Diff context menu commands should 
+	act immediately
+
 2009-01-16  James Liggett  <jrliggett@cox.net>
 
 	* plugins/subversion/subversion-diff-dialog.c
